--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
       <div class="photo">
         <!-- Usando `logo.png` existente dentro de `PaginaPessoal/Image/` -->
-        <img src="Image/oc.png" alt="Foto de Filipe Carvalho">
+        <img src="Image/OC.png" alt="Foto de Filipe Carvalho">
       </div>
       <div class="info">
         <h1>Filipe Carvalho Moura</h1>
